# afmtool1

./: .flake8  .gitignore  CLEANUP_LOG.md  FINAL_CLEANUP_LOG.md  PRODUCTION_STATUS.md  README.md  add_uuids_to_cases.py  create_sample_images.py  main.py  main_gui.py  pyproject.toml  quality_report.json  report_dashboard.py  requirements.txt  run_core_tests.py  test_quality.py  test_report_function.py
.github/: copilot-instructions.md
.github/workflows/: ci.yml  python-tests.yml  quality.yml
data/: cases.json  cases_backup.json  cases_backup_before_uuid.json  persones.json  test_database.json
data/exports/: afm_export_2025-07-24_16-57-08.json  afm_export_2025-07-24_16-58-03.json  afm_export_2025-07-24_16-58-33.json  afm_export_2025-07-24_16-58-41.json  afm_export_2025-07-24_16-59-14.json  afm_export_2025-07-24_16-59-42.json  afm_export_2025-07-24_17-05-37.json  afm_export_2025-07-24_17-06-07.json  afm_export_2025-07-24_17-06-59.json  afm_export_2025-07-24_17-07-28.json  afm_export_2025-07-24_17-14-27.json  afm_export_2025-07-24_17-14-55.json
data/image_cache/downloads/: img-s-msn-com.akamaized.net_AA1BtF3F_5dd35b62.img  img-s-msn-com.akamaized.net_AA1J7UbT_9ef1a0aa.img
data/report/: case_report.py  report.py
data/user_data/: afm_strings_local.old
gui/: __init__.py  main_window.py
gui/components/: __init__.py  case_editor.py  dashboard.py  dialogs.py  image_viewer.py
gui/services/: __init__.py  data_service.py  data_service_old.py  data_service_pure.py  export_service.py
test/: README.md  __init__.py  afm_auto_generator.py  afm_string_handler.py  simple_afm.py  simple_last_row.py  test_core_functionality.py  test_edge_cases.py  test_modular_afm.py  test_report_function.py
utils/: __init__.py  afm_pure.py  afm_utils.py  database.py  fallnummer_verknuepfung.py  logger.py  unique_timestamps.py
(+5 files in other folders)
