# AFMTool1 - Minimal Configuration

[tool.pytest.ini_options]
testpaths = ["test", "."]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--tb=short",
    "--disable-warnings"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
